--- a/Stratego/res/values/strings.xml
+++ b/Stratego/res/values/strings.xml
@@ -8,5 +8,6 @@
 	<string name="username">Username:</string>
 	<string name="password">Password:</string>
 	<string name="login_button">Login</string>
+	<string name="prompt_username">Username</string>
 	
 </resources>
