--- a/Stratego/res/values/strings.xml
+++ b/Stratego/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="login_button">Login</string>
     <string name="prompt_username">Username</string>
     <string name="title_activity_create_user">Create User</string>
+    <string name="title_activity_stratego_board">StrategoBoardActivity</string>
 
 </resources>
