--- a/Stratego/res/values/strings.xml
+++ b/Stratego/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="prompt_username">Username</string>
     <string name="title_activity_create_user">Create User</string>
     <string name="title_activity_stratego_board">StrategoBoardActivity</string>
+    <string name="title_activity_lobby">Lobby</string>
 
 </resources>
